# die_library

./: .gitmodules  CMakeLists.txt  README.md  build_mingw_win32_static.bat  build_msvc_win32.bat  build_msvc_win64.bat  build_msvc_winxp.bat  build_win32.bat  build_win64.bat  build_win_generic.cmd  build_winxp.bat  die_library.pro
.github/workflows/: builder.yml  checkLinux.yml  cmake-multi-platform.yml
dep/Formats/: scanitem.cmake  scanitem.cpp  scanitem.h  scanitem.pri  scanitemmodel.cpp  scanitemmodel.h  subdevice.cpp  subdevice.h  xbinary.cmake  xbinary.cpp  xbinary.h  xbinary.pri  xbinary_def.h  xcom.cpp  xcom.h  xcom_def.h  xdataconvertor.cmake  xdataconvertor.cpp  xdataconvertor.h  xelf.cpp  xelf.h  xelf_def.h  xformats.cmake  xformats.cpp  xformats.h  xformats.pri  xiodevice.cpp  xiodevice.h  xle.cpp  xle.h  xle_def.h  xmach.cpp  xmach.h  xmach_def.h  xmsdos.cpp  xmsdos.h  xmsdos.pri  xmsdos_def.h  xne.cpp  xne.h  (+4 more)
dep/Formats/audio/: xmp3.cpp  xmp3.h
dep/Formats/images/: xbmp.cpp  xbmp.h  xgif.cpp  xgif.h  xicon.cpp  xicon.h  xjpeg.cpp  xjpeg.h  xpng.cpp  xpng.h  xtiff.cpp  xtiff.h
dep/Formats/video/: xmp4.cpp  xmp4.h  xriff.cpp  xriff.h
dep/XArchive/: CMakeLists.txt  README.md  XArchive.pro  x_ar.cpp  x_ar.h  xapk.cpp  xapk.h  xapks.cpp  xapks.h  xarchive.cmake  xarchive.cpp  xarchive.h  xarchive.pri  xarchives.cmake  xarchives.cpp  xarchives.h  xarchives.pri  xcab.cpp  xcab.h  xcompress.cpp  xcompress.h  xgzip.cpp  xgzip.h  xipa.cpp  xipa.h  xjar.cpp  xjar.h  xlha.cpp  xlha.h  xmachofat.cpp  xmachofat.h  xrar.cpp  xrar.h  xsevenzip.cpp  xsevenzip.h  xzip.cpp  xzip.h  xzlib.cpp  xzlib.h
dep/XCapstone/: CMakeLists.txt  README.md  XCapstone.pro  xcapstone.cmake  xcapstone.cpp  xcapstone.h  xcapstone.pri  xcapstone_x86.pri
dep/XCapstone/x86/: CMakeLists.txt
dep/XDEX/: README.md  xandroidbinary.cpp  xandroidbinary.h  xandroidbinary_def.h  xdex.cmake  xdex.cpp  xdex.h  xdex.pri  xdex_def.h
dep/XPDF/: LICENSE  README.md  xpdf.cmake  xpdf.cpp  xpdf.h  xpdf.pri  xpdf_def.h
dep/build_tools/: .clang-format  LICENSE  OSX_NO_CERT.md  README.md  WINDOWS_BOOT_DEBUG.md  WINDOWS_DISABLE_DRIVER_SIGNATURE.md  WINDOWS_ENABLE_KERNEL_DEBUG.md  linux.sh  mac.sh  windows.cmd
dep/build_tools/cmake/: deploy.cmake
dep/die_script/: README.md  apk_script.cpp  apk_script.h  binary_script.cpp  binary_script.h  com_script.cpp  com_script.h  dex_script.cpp  dex_script.h  die_script.cmake  die_script.cpp  die_script.h  die_script.pri  die_scriptengine.cpp  die_scriptengine.h  elf_script.cpp  elf_script.h  global_script.cpp  global_script.h  ipa_script.cpp  ipa_script.h  jar_script.cpp  jar_script.h  le_script.cpp  le_script.h  lx_script.cpp  lx_script.h  mach_script.cpp  mach_script.h  msdos_script.cpp  msdos_script.h  ne_script.cpp  ne_script.h  pe_script.cpp  pe_script.h  xscriptengine.cpp  xscriptengine.h  zip_script.cpp  zip_script.h
examples/C/: build_win32.bat  simple.c
include/: die.h  nfd.h
lib_source/: die_lib.cpp  die_lib.h  lib_source.pro
res/: resource.rc
samples/C/: build_gcc.sh  build_win32.bat  die.lib
samples/VB/: FormMain.Designer.vb  FormMain.vb
samples/VB.NET/: FormMain.Designer.vb  FormMain.vb
samples/VB6/: Form1.frm  Module1.bas
src/: CMakeLists.txt  global.h
src/include/: die.def  die.h
src/lib/: CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  die_lib.cpp  die_lib.h  lib_source.pro  object_script.die.Debug  object_script.die.Release
